--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<iframe src="https://claude.site/public/artifacts/6fa4d0c4-9a5b-46a3-91eb-f75855d7e231/embed" title="Claude Artifact" width="100%" height="600" frameborder="0" allow="clipboard-write" allowfullscreen></iframe>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>STOC Staffing</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
